--- a/README
+++ b/README
@@ -2,9 +2,8 @@ TiddlyRecon
 
 TiddlyWeb data explorer
 
-N.B.:
-This repository includes chrjs as a submodule:
+Dependencies
+TiddlyRecon requires both jQuery and chrjs:
+    http://jquery.com
     http://github.com/tiddlyweb/chrjs
-After cloning, run the following commands:
-    $ git submodules init
-    $ git submodules update
+The bld/init.sh script automatically downloads these dependencies.
