added package script, TODO list

--- a/README
+++ b/README
@@ -1,9 +1,8 @@
 TiddlyRecon
-
 TiddlyWeb data explorer
 
 Dependencies
 TiddlyRecon requires both jQuery and chrjs:
     http://jquery.com
     http://github.com/tiddlyweb/chrjs
-The bld/init.sh script automatically downloads these dependencies.
+The bld/init.sh script automatically downloads these external dependencies.
