added support for optional minification, updated to-do list
only used when generating TiddlyWiki macro for now

--- a/README
+++ b/README
@@ -2,7 +2,11 @@ TiddlyRecon
 TiddlyWeb data explorer
 
 Dependencies
+
 TiddlyRecon requires both jQuery and chrjs:
     http://jquery.com
     http://github.com/tiddlyweb/chrjs
 The bld/init.sh script automatically downloads these external dependencies.
+
+In addition, YUICompressor is used for minification (optional):
+    http://yuilibrary.com/projects/yuicompressor
