--- a/TODO
+++ b/TODO
@@ -3,12 +3,12 @@
 * loading indicator
 * integrate jQuery.notify
 * special handling for (none) and (all) in recipes and bags, respectively
-* tiddler display swallows line breaks
 * #tiddler lacks bottom border (visible if #tiddlers .listing is taller)
 * UI for specifying host (in status bar)
 * pagination for collections
 * edit functionality (creating recipes/bags/tiddlers, modifying policies)
 * visualize recipe cascade (highlighting duplicate tiddlers)
+* retain list of visited entities, style accordingly
 
 * wikify tiddler contents in TiddlyWiki macro
 * include styles
