--- a/TODO
+++ b/TODO
@@ -2,7 +2,7 @@
 * avoid IDs
 * loading indicator
 * integrate jQuery.notify
-* special handling for (none) and (all) in recipes and bags, respectively
+* special handling for "(none)" and "(all)" in recipes and bags, respectively
 * UI for specifying host (in status bar)
 * pagination for collections
 * edit functionality (creating recipes/bags/tiddlers, modifying policies)
