removed "container" class
This was misleading and unnecessary.

Also, the issue with binary tiddlers was a bug in the TiddlyWeb core
which has now been fixed.

--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
-* error handling (AJAX operations - also: binary tiddlers)
+* error handling (AJAX operations)
 * avoid IDs
 * loading indicator
 * integrate jQuery.notify
