--- a/README
+++ b/README
@@ -1,15 +1,18 @@
 TiddlyRecon
 TiddlyWeb data explorer
 
+
 Configuration
 
 The host URI is defined in scripts/config.js.
 
+
 Dependencies
 
-TiddlyRecon requires both jQuery and chrjs:
+TiddlyRecon requires jQuery, chrjs and some jQuery utility methods:
     http://jquery.com
     http://github.com/tiddlyweb/chrjs
+    http://github.com/FND/jquery/raw/master/util.js
 The bld/init.sh script automatically downloads these external dependencies.
 
 In addition, YUICompressor is used for minification (optional):
